[package]
name = "_04_ownership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ownership1"
path = "src/ownership1.rs"

[[bin]]
name = "ownership2"
path = "src/ownership2.rs"

[[bin]]
name = "ownership3"
path = "src/ownership3.rs"

[[bin]]
name = "reference"
path = "src/reference.rs"

[[bin]]
name = "slice"
path = "src/slice.rs"

[dependencies]
