[package]
name = "_06_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "definition"
path = "src/definition.rs"

[[bin]]
name = "option"
path = "src/option.rs"

[[bin]]
name = "match"
path = "src/match.rs"

[dependencies]
